    - Add "rF2_process_id" under "shared_memory_api" section,
      which sets rF2 process ID string for accessing API from server,
      currently this option is a placeholder and has no effect.

* Vehicles Module
    - Renamed "Standings Module" to "Vehicles Module",
      which provides vehicles data.

* Force Widget
    - Fixed a display issue with very large readings.

2.1.7 (2023-06-16)
-----------------------------
* Flag Widget
    - Add "pit_closed_text" option, which sets custom pit closed text.
    - Add "show_traffic" option, which shows incoming on-track
      traffic indicator (time gap) while in pitlane or after pit-out.
    - Add "traffic_maximum_time_gap" option, which sets
      maximum time gap (seconds) of incoming on-track traffic.
    - Add "traffic_pitout_duration" option, which sets
      traffic indicator extended duration (seconds) after pit-out.

* Delta & Fuel Module
    - Add additional delta data validation and error correction methods,
      which auto corrects potential data desynced & disordered issue
      between recorded laptime and corresponding distance data
      that could happen in rare cases.

* Misc
    - Updated user guide with new options for Flag Widget.

2.1.6 (2023-06-12)
-----------------------------
* Deltabest Widget
    - Add "delta_display_range" option,
      which sets max display range (gain or loss) in seconds
      for delta reading, accepts decimal place.
      Default value is "99.999" seconds.

* Fuel Widget
    - Add "*early" option, which shows estimate number of pit stop counts
      when making an early pit stop at end of current lap.
      This value can be used to determine whether an early pit stop
      is worth performing comparing to "pits" value.
      More example usage and explanation in user guide.
    - Add "show_refueling_level_mark" option,
      which shows estimated fuel level after refueling.
      If the mark is not visible on fuel level bar,