@@ -1171,8 +1171,10 @@ SETTING_DEFAULT = {
         "font_offset_vertical": 0,
         "bar_padding": 0.5,
         "font_color": "#000000",
-        "bkg_color": "#222222",
         "show_background": False,
+        "bkg_color": "#222222",
+        "show_map_background": False,
+        "bkg_color_map": "#88000000",
         "area_size": 400,
         "area_margin": 40,
         "map_color": "#FFFFFF",
